BB-426: fix text overflow on buttons on small screens (#378)
* fixed text overflow on add edition page

* Revert "fixed text overflow on add edition page"

This reverts commit 45e3b9c713db21e906160f40f8ea0e9670684e2b.

* fixed the text overflow bug

* fixed the text overflow bug

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -409,3 +409,7 @@ hr.wide {
 		margin-left: 0.2em;
 	}
 }
+
+.btn{
+	white-space: normal;
+}
